fixed the logo position on tablet view

--- a/partials/_global.scss
+++ b/partials/_global.scss
@@ -43,6 +43,7 @@ body{
 
     }
     &__list{
+        font-size: 1.5rem;
         display: flex;
         justify-content: space-evenly;
         margin: 0;
@@ -63,18 +64,19 @@ body{
     &__item{
         font-weight: 400;
         list-style-type: none;
-        width: 50%;
+        width: 100vw;
         text-align: center;
-        padding: .7rem;
+        padding: .8rem;
         text-decoration: none;
         list-style-type: none;
+
 
         @include tablet {
             margin: 2.25rem;
             padding: 0;
-            }
 
-            
+            }
+ 
         }
         
        &__link{
@@ -84,8 +86,9 @@ body{
 
         &--active{
             @extend .nav__item;
-            border-bottom: .1rem solid $primary-color-white;
+            border-bottom: .2rem solid $primary-color-white;
             padding-bottom: .7rem;
+            font-weight: 600;
 
             @include tablet{
                 @extend .nav__item;
@@ -105,6 +108,10 @@ body{
     padding: 1rem;
     font-family: 'AvenirNextLTPro';
 
+    @include tablet {
+        position: relative;
+    }
+
 
     &__social{
         display: flex;
@@ -114,7 +121,9 @@ body{
             display: flex;
             flex-direction: row;
             align-items: baseline;
+            justify-content: space-between;
             gap: 2rem;
+            
         }
     }
 
@@ -123,6 +132,10 @@ body{
         line-height: 2rem;
         font-weight: 600;
         padding: 1.5rem 0 1rem 0;
+
+        @include tablet {
+            display: none;
+        }
     }
 
     &__box{
@@ -130,17 +143,50 @@ body{
         gap: 2rem;
         padding-bottom: 1rem;
 
+        @include tablet {
+            display: flex;
+            flex-direction: row;
+            align-items: baseline;
+            gap: 2rem;
+        }
+
+    }
+
+    &__boxtitle{
+        display: none;
+
+        @include tablet {
+            display: flex;
+            font-size: 2.25rem;
+            line-height: 2.75rem;
+            font-weight: 600;
+        }
+    }
+
+    &__icons{
+        width: 1.5rem;
+        height: 1.5rem;
+    }
+
+    &__bandlogo{
+        display: none;
+
+        @include tablet {
+            display: flex;
+            padding-right: 3rem;
+
+        }
     }
 
     &__contact{
 
         @include tablet {
             display: flex;
-            justify-content: space-evenly;
+            gap: 1.8rem;
         }
     }
 
-    &__box1{
+    &__management{
         
         @include tablet {
             display: flex;
@@ -148,7 +194,7 @@ body{
         }
     }
 
-    &__box2{
+    &__artist{
         
         @include tablet {
             display: flex;
@@ -156,18 +202,12 @@ body{
         }
     }
 
-    &__box3{
+    &__entertainment{
         
         @include tablet {
             display: flex;
             flex-direction: column;
         }
-    }
-
-
-    &__icons{
-        width: 1.5rem;
-        height: 1.5rem;
     }
 
     &__name{
@@ -176,12 +216,6 @@ body{
         font-weight: 600;
         padding-bottom: 1rem;
 
-        &--adjust{
-
-            @include tablet {
-                
-            }
-        }
     }
 
     &__address{
@@ -208,9 +242,12 @@ body{
     &__logoimage{
 
         @include tablet {
-        position: relative;
-        top: -19.3rem;
-        left: 37.5rem;
+            display: none;
+            // position: sticky;
+            // bottom: 21.7rem;
+            // left: 49.5rem;
+            // width: 7.5rem;
+            // height: 1.25rem;
         }
     }
 
